todos los detalles terminados

--- a/FilmCity/detalles_peliculas.html
+++ b/FilmCity/detalles_peliculas.html
@@ -15,7 +15,7 @@
     <header>
       <div class="titulo"><a href="home.html">FILMCITY</a></div>
       <i class="desplegable bi bi-list"></i>
-      <div class="secciones">
+      <div class="secciones" id="menu-movil">
         <a href="home.html">Inicio</a>
         <a href="peliculas.html"><b>Peliculas</b></a>
         <a href="series.html">Series</a>
