--- a/FilmCity/detalles_series.html
+++ b/FilmCity/detalles_series.html
@@ -1,136 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Detalles Series</title>
+    <link rel="stylesheet" href="estilos/estilos.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <script src="JS/detalles-series.js" defer></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Detalles Series</title>
-  <link rel="stylesheet" href="estilos/estilos.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-  <script src="JS/detalles-series.js" defer></script>
-</head>
-
-<body>
-  <!--HEADER-->
-  <header>
-    <div class="titulo"><a href="home.html">FILMCITY</a></div>
-    <i class="desplegable bi bi-list"></i>
-    <div class="secciones">
-      <a href="home.html">Inicio</a>
-      <a href="peliculas.html"><b>Peliculas</b></a>
-      <a href="series.html">Series</a>
-      <a href="#">Documentales</a>
-    </div>
-    <div class="perfil">
-      <a href="#"><i class="lupa bi bi-search"></i></a>
-      <a href="#">
-        <img class="menu" src="multimedia/imagenes/logotipoMenu.png" alt="" /></a><a href="#"><img class="user"
-          src="multimedia/imagenes/fotoPerfil.jpg" alt="" /></a>
-    </div>
-  </header>
-
-  <!--BANNER SERIE-->
-  <section class="banner">
-    <div class="banner_serie">
-      <img src="multimedia/imagenes/losoprano.jpeg" alt="">
-    </div>
-    <div class="logo_pelicula">
-      <img src="multimedia/imagenes/sopranologo.png" alt="" />
-    </div>
-    <div class="detalles_serie">
-      <div class="boton_serie">
-        <a href="reproductor_series.html" class="verAhora">
-          <i class="bi bi-play-fill bg-secondary"></i>Ver T1 E1
-        </a>
+  <body>
+    <!--HEADER-->
+    <header>
+      <div class="titulo"><a href="home.html">FILMCITY</a></div>
+      <i class="desplegable bi bi-list"></i>
+      <div class="secciones" id="menu-movil">
+        <a href="home.html">Inicio</a>
+        <a href="peliculas.html">Peliculas</a>
+        <a href="series.html"><b>Series</b></a>
+        <a href="#">Documentales</a>
       </div>
-      <div class="botones_serie">
-        <div class="plus">
-          <i class="bi bi-plus-circle mas"></i>
+      <div class="perfil">
+        <a href="#"><i class="lupa bi bi-search"></i></a>
+        <a href="#">
+          <img
+            class="menu"
+            src="multimedia/imagenes/logotipoMenu.png"
+            alt="" /></a
+        ><a href="#"
+          ><img class="user" src="multimedia/imagenes/fotoPerfil.jpg" alt=""
+        /></a>
+      </div>
+    </header>
+
+    <!--BANNER SERIE-->
+    <section class="banner">
+      <div class="banner_serie">
+        <img src="multimedia/imagenes/losoprano.jpeg" alt="" />
+      </div>
+      <div class="logo_pelicula">
+        <img src="multimedia/imagenes/sopranologo.png" alt="" />
+      </div>
+      <div class="detalles_serie">
+        <div class="boton_serie">
+          <a href="reproductor_series.html" class="verAhora">
+            <i class="bi bi-play-fill bg-secondary"></i>Ver T1 E1
+          </a>
         </div>
-        <div class="circulo">
-          <i class="bi bi-hand-thumbs-up rounded-circle"></i>
+        <div class="botones_serie">
+          <div class="plus">
+            <i class="bi bi-plus-circle mas"></i>
+          </div>
+          <div class="circulo">
+            <i class="bi bi-hand-thumbs-up rounded-circle"></i>
+          </div>
+          <div class="circulo">
+            <i class="bi bi-hand-thumbs-down rounded-circle"></i>
+          </div>
+          <div class="circulo">
+            <i class="bi bi-download"></i>
+          </div>
+          <div class="circulo">
+            <i class="bi bi-share"></i>
+          </div>
         </div>
-        <div class="circulo">
-          <i class="bi bi-hand-thumbs-down rounded-circle"></i>
+        <div class="descripcion_serie">
+          <p>
+            Tony Soprano is a man torn between two worlds. As the leader of the
+            North Jersey DiMeo Crime Family, he is a powerful and ruthless
+            figure in the criminal underworld, but he also faces deep emotional
+            and psychological challenges. Tony seeks therapy with Dr. Jennifer
+            Melfi, a psychiatrist, in an effort to deal with the stress of his
+            dual life.
+          </p>
         </div>
-        <div class="circulo">
-          <i class="bi bi-download"></i>
+      </div>
+    </section>
+
+    <!--CAPITULOS SERIE-->
+    <section class="capitulos">
+      <div class="temporadas">
+        <select id="temporadas_serie" class="temporadas_serie"></select>
+      </div>
+      <div class="capitulos">
+        <!--576px-768px-->
+        <div class="capitulos_pequeños" id="capitulos_pequeños"></div>
+        <!--992px-1200px-->
+        <div class="capitulos_grandes" id="capitulos_grandes"></div>
+      </div>
+    </section>
+
+    <!--FOOTER-->
+    <footer>
+      <div class="redes">
+        <i class="bi bi-instagram"></i>
+        <i class="bi bi-twitter-x"></i>
+        <i class="bi bi-tiktok"></i>
+        <i class="bi bi-youtube"></i>
+      </div>
+      <div class="enlaces">
+        <hr />
+        <div class="columna">
+          <a href="#">Preguntas frecuentes</a>
+          <a href="#">Inversores</a>
+          <a href="#">Formas de ver</a>
+          <a href="#">Avisos legales</a>
         </div>
-        <div class="circulo">
-          <i class="bi bi-share"></i>
+        <hr />
+        <div class="columna">
+          <a href="#">Centro de ayuda</a>
+          <a href="#">Empleo</a>
+          <a href="#">Terminos de uso</a>
+        </div>
+        <hr />
+        <div class="columna">
+          <a href="#">Cuenta</a>
+          <a href="#">Solo en FilmCity</a>
+          <a href="#">Garantía legal</a>
+        </div>
+        <hr />
+        <div class="columna">
+          <a href="#">Informacion corporativa</a>
+          <a href="#">Zona de prensa</a>
+          <a href="#">Privacidad</a>
+          <a href="#">Anuncios</a>
         </div>
       </div>
-      <div class="descripcion_serie">
-        <p>Tony Soprano is a man torn between two worlds. As the leader of the North Jersey DiMeo Crime Family, he is a
-          powerful and ruthless figure in the criminal underworld, but he also faces deep emotional and psychological
-          challenges. Tony seeks therapy with Dr. Jennifer Melfi, a psychiatrist, in an effort to deal with the stress
-          of his dual life.</p>
+      <div class="titulo">
+        <a href="#">FILMCITY</a>
       </div>
-    </div>
-  </section>
 
-  <!--CAPITULOS SERIE-->
-  <section class="capitulos">
-    <div class="temporadas">
-      <select id="temporadas_serie" class="temporadas_serie">
-      </select>
-    </div>
-    <div class="capitulos">
-      <!--576px-768px-->
-      <div class="capitulos_pequeños" id="capitulos_pequeños">
+      <div class="copy">
+        <p>
+          &copy; 2025 FILMCITY S.A. Todos los derechos reservados. <br />
+          Diseñado y maquetado por el equipo de FilmCity.
+        </p>
       </div>
-      <!--992px-1200px-->
-      <div class="capitulos_grandes" id="capitulos_grandes">
-      </div>
-    </div>
-  </section>
-
-  <!--FOOTER-->
-  <footer>
-    <div class="redes">
-      <i class="bi bi-instagram"></i>
-      <i class="bi bi-twitter-x"></i>
-      <i class="bi bi-tiktok"></i>
-      <i class="bi bi-youtube"></i>
-    </div>
-    <div class="enlaces">
-      <hr />
-      <div class="columna">
-        <a href="#">Preguntas frecuentes</a>
-        <a href="#">Inversores</a>
-        <a href="#">Formas de ver</a>
-        <a href="#">Avisos legales</a>
-      </div>
-      <hr />
-      <div class="columna">
-        <a href="#">Centro de ayuda</a>
-        <a href="#">Empleo</a>
-        <a href="#">Terminos de uso</a>
-      </div>
-      <hr />
-      <div class="columna">
-        <a href="#">Cuenta</a>
-        <a href="#">Solo en FilmCity</a>
-        <a href="#">Garantía legal</a>
-      </div>
-      <hr />
-      <div class="columna">
-        <a href="#">Informacion corporativa</a>
-        <a href="#">Zona de prensa</a>
-        <a href="#">Privacidad</a>
-        <a href="#">Anuncios</a>
-      </div>
-    </div>
-    <div class="titulo">
-      <a href="#">FILMCITY</a>
-    </div>
-
-    <div class="copy">
-      <p>
-        &copy; 2025 FILMCITY S.A. Todos los derechos reservados. <br />
-        Diseñado y maquetado por el equipo de FilmCity.
-      </p>
-    </div>
-</body>
-
+    </footer>
+  </body>
 </html>
