--- a/FilmCity/reproductor_peliculas.html
+++ b/FilmCity/reproductor_peliculas.html
@@ -13,71 +13,7 @@
   <body>
     <div class="contenedor" id="contenedor">
       <div class="headerRepro">
-        <a href="detalles_peliculas.html"> <i class="bi bi-arrow-left"></i> </a>
-        <button><i class="bi bi-flag"></i></button>
-      </div>
-      <video
-        id="pelicula"
-        class="video"
-        src="multimedia/video/AnillosDetalles.mp4"
-      ></video>
-
-      <div class="footerRepro">
-        <input type="range" id="tiempoPelicula" class="duracion" />
-        <p id="duracionPelicula"></p>
-        <div class="controlador">
-          <button id="play"><i class="bi bi-play-fill"></i></button>
-          <button id="atrasar">
-            <i class="bi bi-arrow-counterclockwise"></i>
-          </button>
-          <button id="adelantar"><i class="bi bi-arrow-clockwise"></i></button>
-        </div>
-        <div class="volumen">
-          <button id="mute" class="mute">
-            <i class="bi bi-volume-off-fill"></i>
-          </button>
-          <input
-            type="range"
-            name=""
-            id="volumen"
-            value="1"
-            min="0"
-            max="1"
-            step="any"
-          />
-          <button id="volumenUp"><i class="bi bi-volume-up-fill"></i></button>
-        </div>
-        <div class="informacion" id="nombre_episodio">
-          El Señor de los Anillos: La Comunidad del Anillo
-        </div>
-        <div class="opciones">
-          <button>
-            <i class="bi bi-chat-right-text"></i>
-          </button>
-          <button id="full"><i class="bi bi-aspect-ratio"></i></button>
-        </div>
-      </div>
-    </div>
-  </body>
-  <script src="JS/reproductor.js"></script>
-</html>
-============================================ REPRODUCTOR SERIES
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reproductor</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
-    <link rel="stylesheet" href="estilos/estilos.css" />
-  </head>
-  <body>
-    <div class="contenedor" id="contenedor">
-      <div class="headerRepro">
-        <a href="detalles_series.html"> <i class="bi bi-arrow-left"></i> </a>
+        <i class="bi bi-arrow-left"> <a href="detalles_peliculas.html"></a></i>
         <button><i class="bi bi-flag"></i></button>
       </div>
       <video
@@ -112,12 +48,12 @@
           <button id="volumenUp"><i class="bi bi-volume-up-fill"></i></button>
         </div>
         <div class="informacion" id="nombre_episodio">
-          Los Soprano T1: Capitulo 1
+          El Señor de los Anillos: La Comunidad del Anillo
         </div>
         <div class="opciones">
-          <a href="" id="siguiente"><i class="bi bi-skip-end"></i></a>
-          <a href="detalles_series.html"><i class="bi bi-collection"></i></a>
-          <button><i class="bi bi-chat-right-text"></i></button>
+          <button>
+            <i class="bi bi-chat-right-text"></i>
+          </button>
           <button id="full"><i class="bi bi-aspect-ratio"></i></button>
         </div>
       </div>
