--- a/FilmCity/reproductor_peliculas.html
+++ b/FilmCity/reproductor_peliculas.html
@@ -13,7 +13,7 @@
   <body>
     <div class="contenedor" id="contenedor">
       <div class="headerRepro">
-        <i class="bi bi-arrow-left"> <a href="detalles_peliculas.html"></a></i>
+        <a href="detalles_peliculas.html"><i class="bi bi-arrow-left"></i></a>
         <button><i class="bi bi-flag"></i></button>
       </div>
       <video
